i made a major change

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <h1>Add a task</h1>
-                <div class="form">
-                    <input type="text" id="taskInput" placeholder="Add a new task...">
-                <input type="date"  id="dateTimeInput">
+                <form class="form">
+                    <input type="text" id="taskInput" placeholder="Add a new task..." required>
+                <input type="date"  id="dateTimeInput" required>
                 <button id="addTaskBtn">Add</button>
-                </div>
+                </form>
             </div>
 
         </div>
@@ -217,7 +217,7 @@
     </section>
 
     <script src="js/script.js"></script>
-    <script src="js/home.js"></script>
+    <script src="js/new.js"></script>
 </body>
 
 </html>
