I added some animations

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div id="myModal" class="modal">
 
             <!-- Modal content -->
-            <div class="modal-content">
+            <div class="modal-content" id="modal">
                 <span class="close">&times;</span>
                 <h1>Add a task</h1>
                 <form class="form">
@@ -210,7 +210,7 @@
         <!-- main content -->
         <main>
             <div class="list">
-                <h2 style="margin-left: 10px; margin-top: 20px;">My Lists</h2>
+                <h2 style="margin-left: 10px; margin-top: 20px;">My Tasks(<span id="taskCount">0</span>)</h2>
                 <ul id="taskList"></ul> 
             </div>
         </main>
