i made some changes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <!-- duplicate or remove this li tag if you want to add or remove navlink with submenu -->
                     <!-- start -->
                     <li class="item">
-                        <div href="#" class="nav_link submenu_item" onclick="myFunction()">
+                        <div href="#" class="nav_link submenu_item" onclick="myfunction(windows.href= 'index.html')">
                             <span class="navlink_icon">
                                 <i class="bx bx-home-alt"></i>
                             </span>
@@ -123,7 +123,7 @@
                     <!-- duplicate these li tag if you want to add or remove navlink only -->
                     <!-- Start -->
                     <li class="item" onclick="myFunction()">
-                        <a href="#" class="nav_link">
+                        <a href="myLists.html" class="nav_link">
                             <span class="navlink_icon">
                                 <i class='bx bx-list-ol'></i>
                             </span>
